re #52 corrected windows build issues

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -227,6 +227,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAPI\Sample.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAPI\Workspace.h"
 				>
 			</File>
