--- a/Code/Mantid/Services/SConscript
+++ b/Code/Mantid/Services/SConscript
@@ -11,7 +11,12 @@ listCpps = MantidBuild.getCPPFiles(codeFolder)
 Import('env')
 
 #BUILD CODE
-shared = env.SharedLibrary('lib/MantidServices', listCpps, LIBS=[ ], LIBPATH=[ ])
-static = env.StaticLibrary('lib/MantidServicesStatic', listCpps, LIBS=[ ], LIBPATH=[ ])
-retval = { 'shared': shared, 'static': static, 'libs': [ 'MantidServices' ] }
+if os.name == 'nt':
+	shared = env.SharedLibrary('lib/MantidServices', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+	static = env.StaticLibrary('lib/MantidServicesStatic', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+else:
+	shared = env.SharedLibrary('lib/MantidServices', listCpps, LIBS=[ ], LIBPATH=[ ])
+	static = env.StaticLibrary('lib/MantidServicesStatic', listCpps, LIBS=[ ], LIBPATH=[ ])
+
+	retval = { 'shared': shared, 'static': static, 'libs': [ 'MantidServices' ] }
 Return('retval')
