--- a/Code/Mantid/DataObjects/SConscript
+++ b/Code/Mantid/DataObjects/SConscript
@@ -11,7 +11,12 @@ listCpps = MantidBuild.getCPPFiles(codeFolder)
 Import('env')
 
 #BUILD CODE
-shared = env.SharedLibrary('lib/MantidDataObjects', listCpps, LIBS=[ ], LIBPATH=[ ])
-static = env.StaticLibrary('lib/MantidDataObjectsStatic', listCpps, LIBS=[ ], LIBPATH=[ ])
+if os.name == 'nt':
+	shared = env.SharedLibrary('lib/MantidDataObjects', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+	static = env.StaticLibrary('lib/MantidDataObjectsStatic', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+else:
+	shared = env.SharedLibrary('lib/MantidDataObjects', listCpps, LIBS=[ ], LIBPATH=[ ])
+	static = env.StaticLibrary('lib/MantidDataObjectsStatic', listCpps, LIBS=[ ], LIBPATH=[ ])
+	
 retval = { 'shared': shared, 'static': static, 'libs': [ 'MantidDataObjects' ] }
 Return('retval')
