--- a/Code/Mantid/DataHandling/SConscript
+++ b/Code/Mantid/DataHandling/SConscript
@@ -12,8 +12,12 @@ listCpps.append(MantidBuild.getCPPFiles(codeFolder + '/LoadRaw'))
 Import('env')
 
 #BUILD CODE
-shared = env.SharedLibrary('lib/MantidDataHandling', listCpps, LIBS=[ ], LIBPATH=[ ])
-static = env.StaticLibrary('lib/MantidDataHandlingStatic', listCpps, LIBS=[ ], LIBPATH=[ ])
+if os.name == 'nt':
+	shared = env.SharedLibrary('lib/MantidDataHandling', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+	static = env.StaticLibrary('lib/MantidDataHandlingStatic', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+else:
+	shared = env.SharedLibrary('lib/MantidDataHandling', listCpps, LIBS=[ ], LIBPATH=[ ])
+	static = env.StaticLibrary('lib/MantidDataHandlingStatic', listCpps, LIBS=[ ], LIBPATH=[ ])
 
 retval = { 'shared': shared, 'static': static, 'libs': ['MantidDataHandling'] }
 Return('retval')
