--- a/Code/Mantid/Algorithms/SConscript
+++ b/Code/Mantid/Algorithms/SConscript
@@ -11,7 +11,12 @@ listCpps = MantidBuild.getCPPFiles(codeFolder)
 Import('env')
 
 #BUILD CODE
-shared = env.SharedLibrary('lib/MantidAlgorithms', listCpps, LIBS=[ ], LIBPATH=[ ])
-static = env.StaticLibrary('lib/MantidAlgorithmsStatic', listCpps, LIBS=[ ], LIBPATH=[ ])
+if os.name == 'nt':
+	shared = env.SharedLibrary('lib/MantidAlgorithms', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+	static = env.StaticLibrary('lib/MantidAlgorithmsStatic', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+else:
+	shared = env.SharedLibrary('lib/MantidAlgorithms', listCpps, LIBS=[ ], LIBPATH=[ ])
+	static = env.StaticLibrary('lib/MantidAlgorithmsStatic', listCpps, LIBS=[ ], LIBPATH=[ ])
+	
 retval = { 'shared': shared, 'static': static, 'libs': [ 'MantidAlgorithms' ] }
 Return('retval')
