re #64 Clear final warnings on windows build, mainly in iterator

--- a/Code/Mantid/DataObjects/DataObjects.vcproj
+++ b/Code/Mantid/DataObjects/DataObjects.vcproj
@@ -158,6 +158,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\tripleIterator.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\TripleRef.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Workspace1D.cpp"
 				>
 			</File>
@@ -173,6 +181,14 @@
 			>
 			<File
 				RelativePath=".\inc\MantidDataObjects\Histogram1D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataObjects\tripleIterator.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataObjects\TripleRef.h"
 				>
 			</File>
 			<File
