re #70 Remane RefControl to cow_ptr. Copy on Write pointer was agreed was more descriptive name than RefControl. The pointer has also been moved from Mantid to Mantid::Kernel Namespace.
Also removed a large number of includes for this file that were not needed.

--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -268,7 +268,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidKernel\RefControl.h"
+				RelativePath=".\inc\MantidKernel\cow_ptr.h"
 				>
 			</File>
 			<File
