--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -155,6 +155,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\plus.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SimpleIntegration.cpp"
 				>
 			</File>
@@ -170,6 +174,10 @@
 			>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\PhysicalConstants.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\plus.h"
 				>
 			</File>
 			<File
