re #59 improve object lifetime of the Plus algorithm results If this works the same fix will be applied to minus multiply and divide

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -164,6 +164,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\HelloWorldAlgorithm.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Minus.cpp"
 				>
 			</File>
@@ -195,6 +199,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\Divide.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\HelloWorldAlgorithm.h"
 				>
 			</File>
 			<File
